--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Party</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <header>
-        
+    <header class="header-section">
+        <div class="header-container">
+            <h3 class="header-tag">Happy New Year</h3>
+            <h1 class="header-title">New Year Party Celebration</h1>
+        </div>
     </header>
 
     <main>
