Added discount section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,21 @@
     </header>
 
     <main>
+        <section>
+            <div class="offer-section">
+                <h1 class="discount">65% OFF</h1>
+                <h3 class="offer-title">OUR HOLIDAY DEALS ARE BETTER</h3>
+                <h2 class="offer-category">ALL CATEGORIES</h2>
+                <img class="offer-img" src="/resources/New Year Photo.png" alt="">
+            </div>
+        </section>
 
+        <section>
+            <div class="party-section">
+                <h1 class="party-title">Welcome to midnight party</h1>
+                <p class="party-description">The New Year's Eve party for 2024 is going to be very exciting. To secure your seat, please press the 'Join Now' button and complete the registration</p>
+            </div>
+        </section>
     </main>
 
     <footer>
