change style path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Party</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header class="header-section">
@@ -26,8 +26,14 @@
 
         <section>
             <div class="party-section">
+                <div class="party-text">
                 <h1 class="party-title">Welcome to midnight party</h1>
                 <p class="party-description">The New Year's Eve party for 2024 is going to be very exciting. To secure your seat, please press the 'Join Now' button and complete the registration</p>
+                <button>Join Now</button>
+            </div>
+            <div class="party-img">
+                <img src="/resources/Group 70.png" alt="">
+            </div>
             </div>
         </section>
     </main>
