--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header-section">
-        <div class="header-container">
+        <div class="header-container container">
             <h3 class="header-tag">Happy New Year</h3>
             <h1 class="header-title">New Year Party Celebration</h1>
         </div>
@@ -16,7 +16,7 @@
 
     <main>
         <section>
-            <div class="offer-section">
+            <div class="offer-section container">
                 <h1 class="discount">65% OFF</h1>
                 <h3 class="offer-title">OUR HOLIDAY DEALS ARE BETTER</h3>
                 <h2 class="offer-category">ALL CATEGORIES</h2>
@@ -25,14 +25,14 @@
         </section>
 
         <section>
-            <div class="party-section">
+            <div class="party-section container">
                 <div class="party-text">
                 <h1 class="party-title">Welcome to midnight party</h1>
                 <p class="party-description">The New Year's Eve party for 2024 is going to be very exciting. To secure your seat, please press the 'Join Now' button and complete the registration</p>
                 <button>Join Now</button>
             </div>
             <div class="party-img">
-                <img src="/resources/Group 70.png" alt="">
+                <img src="/resources/Group 70.png" alt=""> 
             </div>
             </div>
         </section>
