complete midnight section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
                 <button>Join Now</button>
             </div>
             <div class="party-img">
-                <img src="/resources/Group 70.png" alt=""> 
+                <img src="/resources/Group 70.png" alt="">
             </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="location-section">
+                <h3 class="location">Place: New Park Hotel <br>
+                    Date: 31 December Night 2023 <br>
+                    Time: Evening 7.30 pm to 12.30 am</h3>
+                    <button>Join Now</button>
             </div>
         </section>
     </main>
