--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
 
         <section>
             <div class="location-section">
-                <h3 class="location">Place: New Park Hotel <br>
-                    Date: 31 December Night 2023 <br>
-                    Time: Evening 7.30 pm to 12.30 am</h3>
+                <h3 class="location"> <span class="location-title">Place:</span> New Park Hotel <br>
+                    <span class="location-title">Date:</span> 31 December Night 2023 <br>
+                    <span class="location-title">Time:</span> Evening 7.30 pm to 12.30 am</h3>
                     <button>Join Now</button>
             </div>
         </section>
+
+        
     </main>
 
     <footer>
