best offer section add

--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
             </div>
         </section>
 
-        
+        <section>
+            <div class="best-offer-container">
+                <div class="best-offer">
+                    <h3 class="best-title">NEW BEST OFFER</h3>
+                    <h2 class="best-announce">Coming Soon</h2>
+                    <p class="common-description">Upto 65% discount here for new year Celebration. Celebrate your new year with us with huge discount.For more discount keep your eyes on us.</p>
+                </div>
+                <div class="best-offer">
+                    <img class="best-img" src="/resources/Ellipse 1.png" alt="Celebrstion">
+                </div>
+                <div class="best-offer">
+                    <h2 class="year-title">2024</h2>
+                    <p class="common-description">Wishing you and yours a safe, healthy, and prosperous new year</p>
+                    <img src="/resources/Group 96.png" alt="" class="year-img">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
