add discount section without image

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="holiday-section">
+                <h3 class="holiday-title">WHAT IS FUNCTIONAL</h3>
+                <h1 class="holiday-discount"><span class="holidays-color">Holidays</span> Sale 50%</h1>
+                <p class="common-description">New year big sell offer. You can get 50% off at all of our brunch. Enjoy new year with new dream and big discount. </p>
+            </div>
+        </section>
     </main>
 
     <footer>
