--- a/index.html
+++ b/index.html
@@ -70,6 +70,48 @@
                 <h1 class="holiday-discount"><span class="holidays-color">Holidays</span> Sale 50%</h1>
                 <p class="common-description">New year big sell offer. You can get 50% off at all of our brunch. Enjoy new year with new dream and big discount. </p>
             </div>
+
+            <div class="discount-image-section">
+                
+                <img class="fifty-discount" src="/resources/Group 44.png" alt="">
+                <img class="woman-pic" src="/resources/Rectangle 1.png" alt="">
+                <img class="box-pic" src="/resources/Group 75.png" alt="">
+                <img class="red-bar" src="/resources/Rectangle 2.png" alt="">
+                
+            </div>
+        </section>
+
+        <section class="main-portfolio">
+            <div class="portfolio-section">
+                <h3 class="best-title">THE BEST GIFT</h3>
+                <h2 class="best-announce">Our Awesome Portfolio</h2>
+                <p class="common-description">Here is our best selling awesome product. This product is now on hot sell. </p>
+            </div>
+            <div class="portfolio-container">
+                <div class="sec1">
+                    <img src="/resources/Rectangle 3.png" alt="">
+                    <img src="/resources/Rectangle 4.png" alt="">
+                    <img class="img3" src="/resources/Rectangle 5.png" alt="">
+                </div>
+                <div class="sec2">
+                    <img src="/resources/Rectangle 6.png" alt="">
+                    <img src="/resources/Rectangle 7.png" alt="">
+                    <img class="img6" src="/resources/Rectangle 8.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="newsletter">
+                <img src="/resources/Group 61.png" alt="">
+                <h2 class="best-announce">Subscribe Newsletter</h2>
+                <p class="common-description">For any kind of update and discount please Subscribe our Newsletter</p>
+                <form action="" class="newsletter-form">
+                <input type="email" placeholder="user@gmail.com" class="newsletter-email">
+                <input type="submit" class="button">
+            </form>
+
+            </div>
         </section>
     </main>
 
