add button and email

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p class="common-description">For any kind of update and discount please Subscribe our Newsletter</p>
                 <form action="" class="newsletter-form">
                 <input type="email" placeholder="user@gmail.com" class="newsletter-email">
-                <input type="submit" class="button">
+                <Button class="button">Subscribe</Button>
             </form>
 
             </div>
