Work on discount

--- a/index.html
+++ b/index.html
@@ -116,7 +116,22 @@
     </main>
 
     <footer>
-
+        <div class="footer-section common-footer">
+            <div>
+                <h3>44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</h3>
+            </div>
+            <div>
+                <h3>+00 123 584 124</h3>
+                <h3>www.website.com</h3>
+            </div>
+        </div>
+        <hr>
+        <div class="social-link">
+            <a href=""><img src="/resources/Facebook.png" alt=""></a>
+            <a href="fe"><img src="/resources/Instagram.png" alt=""></a>
+            <a href=""><img src="/resources/Linkedin.png" alt=""></a>
+        </div>
     </footer>
 </body>
 </html>
