--- a/index.html
+++ b/index.html
@@ -129,8 +129,14 @@
         <hr>
         <div class="social-link">
             <a href=""><img src="/resources/Facebook.png" alt=""></a>
-            <a href="fe"><img src="/resources/Instagram.png" alt=""></a>
+            <a href=""><img src="/resources/Instagram.png" alt=""></a>
+            <a href=""><img src="/resources/Twitter.png" alt=""></a>
             <a href=""><img src="/resources/Linkedin.png" alt=""></a>
+        </div>
+        <hr>
+        <div class="common-footer down-footer">
+            <div><h3>2017, All Rights Reserved.</h3></div>
+            <div><h3>Unsubscribe</h3></div>
         </div>
     </footer>
 </body>
