--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Party</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/b00402529a.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header-section">
@@ -20,7 +21,7 @@
                 <h1 class="discount">65% OFF</h1>
                 <h3 class="offer-title">OUR HOLIDAY DEALS ARE BETTER</h3>
                 <h2 class="offer-category">ALL CATEGORIES</h2>
-                <img class="offer-img" src="/resources/New Year Photo.png" alt="">
+                <img class="offer-img" src="resources/New Year Photo.png" alt="">
             </div>
         </section>
 
@@ -32,7 +33,7 @@
                 <button>Join Now</button>
             </div>
             <div class="party-img">
-                <img src="/resources/Group 70.png" alt="">
+                <img src="resources/Group 70.png" alt="">
             </div>
             </div>
         </section>
@@ -54,12 +55,12 @@
                     <p class="common-description">Upto 65% discount here for new year Celebration. Celebrate your new year with us with huge discount.For more discount keep your eyes on us.</p>
                 </div>
                 <div class="best-offer">
-                    <img class="best-img" src="/resources/Ellipse 1.png" alt="Celebrstion">
+                    <img class="best-img" src="resources/Ellipse 1.png" alt="Celebrstion">
                 </div>
                 <div class="best-offer">
                     <h2 class="year-title">2024</h2>
                     <p class="common-description">Wishing you and yours a safe, healthy, and prosperous new year</p>
-                    <img src="/resources/Group 96.png" alt="" class="year-img">
+                    <img src="resources/Group 96.png" alt="" class="year-img">
                 </div>
             </div>
         </section>
@@ -73,10 +74,10 @@
 
             <div class="discount-image-section">
                 
-                <img class="fifty-discount" src="/resources/Group 44.png" alt="">
-                <img class="woman-pic" src="/resources/Rectangle 1.png" alt="">
-                <img class="box-pic" src="/resources/Group 75.png" alt="">
-                <img class="red-bar" src="/resources/Rectangle 2.png" alt="">
+                <img class="fifty-discount" src="resources/Group 44.png" alt="">
+                <img class="woman-pic" src="resources/Rectangle 1.png" alt="">
+                <img class="box-pic" src="resources/Group 75.png" alt="">
+                <img class="red-bar" src="resources/Rectangle 2.png" alt="">
                 
             </div>
         </section>
@@ -89,21 +90,21 @@
             </div>
             <div class="portfolio-container">
                 <div class="sec1">
-                    <img src="/resources/Rectangle 3.png" alt="">
-                    <img src="/resources/Rectangle 4.png" alt="">
-                    <img class="img3" src="/resources/Rectangle 5.png" alt="">
+                    <img src="resources/Rectangle 3.png" alt="">
+                    <img src="resources/Rectangle 4.png" alt="">
+                    <img class="img3" src="resources/Rectangle 5.png" alt="">
                 </div>
                 <div class="sec2">
-                    <img src="/resources/Rectangle 6.png" alt="">
-                    <img src="/resources/Rectangle 7.png" alt="">
-                    <img class="img6" src="/resources/Rectangle 8.png" alt="">
+                    <img src="resources/Rectangle 6.png" alt="">
+                    <img src="resources/Rectangle 7.png" alt="">
+                    <img class="img6" src="resources/Rectangle 8.png" alt="">
                 </div>
             </div>
         </section>
 
         <section>
             <div class="newsletter">
-                <img src="/resources/Group 61.png" alt="">
+                <img src="resources/Group 61.png" alt="">
                 <h2 class="best-announce">Subscribe Newsletter</h2>
                 <p class="common-description">For any kind of update and discount please Subscribe our Newsletter</p>
                 <form action="" class="newsletter-form">
@@ -122,16 +123,16 @@
                     Beach Gardens Florida 33410</h3>
             </div>
             <div>
-                <h3>+00 123 584 124</h3>
-                <h3>www.website.com</h3>
+                <h3> <i class="fa-solid fa-phone"></i> +00 123 584 124</h3>
+                <h3> <i class="fa-solid fa-globe"></i> www.website.com</h3>
             </div>
         </div>
         <hr>
         <div class="social-link">
-            <a href=""><img src="/resources/Facebook.png" alt=""></a>
-            <a href=""><img src="/resources/Instagram.png" alt=""></a>
-            <a href=""><img src="/resources/Twitter.png" alt=""></a>
-            <a href=""><img src="/resources/Linkedin.png" alt=""></a>
+            <a href=""><img src="resources/Facebook.png" alt=""></a>
+            <a href=""><img src="resources/Instagram.png" alt=""></a>
+            <a href=""><img src="resources/Twitter.png" alt=""></a>
+            <a href=""><img src="resources/Linkedin.png" alt=""></a>
         </div>
         <hr>
         <div class="common-footer down-footer">
